# python-barbicanclient

./: .coveragerc  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  clientrc  cloudkeyp  keep  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
barbicanclient/: __init__.py  _i18n.py  acls.py  barbican.py  base.py  cas.py  client.py  containers.py  exceptions.py  formatter.py  keep.py  orders.py  osc_plugin.py  secrets.py  verifications.py  version.py
barbicanclient/barbican_cli/: acls.py  cas.py  containers.py  formatter.py  orders.py  secrets.py
barbicanclient/barbican_cli/v1/: acls.py  cas.py  containers.py  orders.py  secrets.py
barbicanclient/common/: auth.py  config.py  exceptions.py  http.py  utils.py
barbicanclient/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  log.py  version.py
barbicanclient/test/: keystone_client_fixtures.py  test_barbican.py  test_client.py  test_client_containers.py  test_client_orders.py  test_client_secrets.py  test_client_verifications.py  test_keep.py
barbicanclient/test/common/: test_auth.py
barbicanclient/tests/: keystone_client_fixtures.py  test_acls.py  test_barbican.py  test_base.py  test_cas.py  test_client.py  test_containers.py  test_formatter.py  test_orders.py  test_secrets.py  utils.py
barbicanclient/tests/v1/: test_acls.py  test_cas.py  test_consumers.py  test_containers.py  test_orders.py  test_secrets.py
barbicanclient/v1/: acls.py  cas.py  client.py  containers.py  orders.py  secrets.py
doc/: requirements.txt
doc/source/: authentication.rst  cli_usage.rst  conf.py  functional_tests.rst  index.rst  reference.rst  testing.rst  usage.rst
doc/source/cli/: authentication.rst  cli_usage.rst  details.rst  index.rst  usage.rst
doc/source/contributor/: index.rst  testing.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
etc/: barbicanclient.conf  functional_tests.conf
examples/: create_order.py  create_secret.py  delete_order.py  delete_secret.py  get_order.py  get_secret.py  list_orders.py  list_secrets.py  secrets.py
functionaltests/: __init__.py  base.py  post_test_hook.sh  run_tests.sh  utils.py
functionaltests/cli/: base.py
functionaltests/cli/v1/behaviors/: acl_behaviors.py  base_behaviors.py  consumer_behaviors.py  container_behaviors.py  secret_behaviors.py
functionaltests/cli/v1/smoke/: test_acl.py  test_consumer.py  test_container.py  test_help.py  test_secret.py
functionaltests/client/: __init__.py  base.py  test_client_connectivity.py
functionaltests/client/v1/behaviors/: base_behaviors.py  container_behaviors.py  order_behaviors.py  secret_behaviors.py
functionaltests/client/v1/functional/: test_acl.py  test_containers.py  test_orders.py  test_secrets.py
functionaltests/client/v1/smoke/: test_containers.py  test_orders.py  test_secrets.py
functionaltests/common/: cleanup.py  config.py  keys.py
playbooks/python-barbicanclient-dsvm/: run.yaml
releasenotes/notes/: add-secret-consumers-a65cd6b22d28184d.yaml  drop-py-2-7-50042a0e2227c095.yaml  remove-certificate-order-b7ba806f1a918657.yaml  use-only-uuid-from-href-81710d1b388dce57.yaml
tests/: client_test.py  test_auth.py
tools/: hacking.sh  pip-requires  test-requires  tox_install.sh
