[metadata]
name = python-barbicanclient
summary = Client Library for OpenStack Barbican Key Management API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    barbicanclient

[entry_points]
console_scripts =
    barbican = barbicanclient.barbican:main

barbican.client =

    order_create = barbicanclient.barbican_cli.orders:CreateOrder
    order_delete = barbicanclient.barbican_cli.orders:DeleteOrder
    order_get = barbicanclient.barbican_cli.orders:GetOrder
    order_list = barbicanclient.barbican_cli.orders:ListOrder

    secret_delete = barbicanclient.barbican_cli.secrets:DeleteSecret
    secret_get = barbicanclient.barbican_cli.secrets:GetSecret
    secret_list = barbicanclient.barbican_cli.secrets:ListSecret
    secret_store = barbicanclient.barbican_cli.secrets:StoreSecret

    container_delete = barbicanclient.barbican_cli.containers:DeleteContainer
    container_get = barbicanclient.barbican_cli.containers:GetContainer
    container_list = barbicanclient.barbican_cli.containers:ListContainer
    container_create = barbicanclient.barbican_cli.containers:CreateContainer

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
