[metadata]
name = python-barbicanclient
summary = Client Library for OpenStack Barbican Key Management API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    barbicanclient

[entry_points]
console_scripts =
    barbican = barbicanclient.barbican:main

openstack.cli.extension =
    key_manager = barbicanclient.osc_plugin

openstack.key_manager.v1 =

    secret_order_create = barbicanclient.barbican_cli.orders:CreateOrder
    secret_order_delete = barbicanclient.barbican_cli.orders:DeleteOrder
    secret_order_get = barbicanclient.barbican_cli.orders:GetOrder
    secret_order_list = barbicanclient.barbican_cli.orders:ListOrder

    secret_delete = barbicanclient.barbican_cli.secrets:DeleteSecret
    secret_get = barbicanclient.barbican_cli.secrets:GetSecret
    secret_list = barbicanclient.barbican_cli.secrets:ListSecret
    secret_store = barbicanclient.barbican_cli.secrets:StoreSecret
    secret_update = barbicanclient.barbican_cli.secrets:UpdateSecret

    secret_container_delete = barbicanclient.barbican_cli.containers:DeleteContainer
    secret_container_get = barbicanclient.barbican_cli.containers:GetContainer
    secret_container_list = barbicanclient.barbican_cli.containers:ListContainer
    secret_container_create = barbicanclient.barbican_cli.containers:CreateContainer

    ca_get = barbicanclient.barbican_cli.cas:GetCA
    ca_list = barbicanclient.barbican_cli.cas:ListCA

    acl_delete = barbicanclient.barbican_cli.acls:DeleteACLs
    acl_get = barbicanclient.barbican_cli.acls:GetACLs
    acl_submit = barbicanclient.barbican_cli.acls:SubmitACL
    acl_user_add = barbicanclient.barbican_cli.acls:AddACLUsers
    acl_user_remove = barbicanclient.barbican_cli.acls:RemoveACLUsers

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
