[metadata]
name = python-barbicanclient
summary = Client Library for OpenStack Barbican Key Management API
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-barbicanclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[files]
packages =
    barbicanclient

[entry_points]
console_scripts =
    barbican = barbicanclient.barbican:main

openstack.cli.extension =
    key_manager = barbicanclient.osc_plugin

openstack.key_manager.v1 =

    secret_order_create = barbicanclient.barbican_cli.v1.orders:CreateOrder
    secret_order_delete = barbicanclient.barbican_cli.v1.orders:DeleteOrder
    secret_order_get = barbicanclient.barbican_cli.v1.orders:GetOrder
    secret_order_list = barbicanclient.barbican_cli.v1.orders:ListOrder

    secret_delete = barbicanclient.barbican_cli.v1.secrets:DeleteSecret
    secret_get = barbicanclient.barbican_cli.v1.secrets:GetSecret
    secret_list = barbicanclient.barbican_cli.v1.secrets:ListSecret
    secret_store = barbicanclient.barbican_cli.v1.secrets:StoreSecret
    secret_update = barbicanclient.barbican_cli.v1.secrets:UpdateSecret

    secret_container_delete = barbicanclient.barbican_cli.v1.containers:DeleteContainer
    secret_container_get = barbicanclient.barbican_cli.v1.containers:GetContainer
    secret_container_list = barbicanclient.barbican_cli.v1.containers:ListContainer
    secret_container_create = barbicanclient.barbican_cli.v1.containers:CreateContainer

    ca_get = barbicanclient.barbican_cli.v1.cas:GetCA
    ca_list = barbicanclient.barbican_cli.v1.cas:ListCA

    acl_delete = barbicanclient.barbican_cli.v1.acls:DeleteACLs
    acl_get = barbicanclient.barbican_cli.v1.acls:GetACLs
    acl_submit = barbicanclient.barbican_cli.v1.acls:SubmitACL
    acl_user_add = barbicanclient.barbican_cli.v1.acls:AddACLUsers
    acl_user_remove = barbicanclient.barbican_cli.v1.acls:RemoveACLUsers

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
